# UHS-in-Aquifers

Aquifer/: CMakeLists.txt  config.h.cmake  dumux-Mixing.pc.in  dune.module  install_vahabzadeh2026a.py
Aquifer/PostFun/: ANN_Training.py  ANN_learning.py  Cost_optimisation_gurobi_pool.py  Input_gen.py  NN_optmisation_for_gurobi.py  ann_model_withoutCG_AC.pt  average_velocity.py  compute_dimensionless_numbers.py  correlation_feature.py  generate_optimisation_scenarios.py  mix_and_match.py  optimise_uk_portfolio.py  optuna_optimization_history.db  params.input  plot_pe_ng_rf.py  scalers_withoutCG_AC.pkl  std_plot_optimisation.py
Aquifer/PostFun/Other/: Capacity_Map.py  Data_read.py  Data_vis.py  Energy_mix_plot.py  Global_Sensitivity.py  GridSens.py  LHS.py  Linear_regression.py  NN_RF.py  NN_forplot.py  PSA_plot.py  Pe_Ng_sens.py  Pe_vs_Ng_from_NN_Model.py  RF-calculator.py  RF_CN  Sens_NN.py  Statistics.py  Test_plot.py  UHS_optimization_GA.py  UHS_optimization_PSO.py  UK_Map.py  UK_Market.py  UK_plot.py  Uk_plot2.py  barchart_optimized_RF_reservoirs.py  calculator.py  clustering_lowK.py  cost_optimisation_PSO.py  cp_plot.py  deficit_plot.py  delta_rho.py  field_data_table.py  filename_update.py  input_generator.py  pi_chart.py  plot_all_optimisation.py  plot_data.py  plot_optim_separation.py  plot_optimisation.py  runscript.py  (+6 more)
Aquifer/appl/: CMakeLists.txt
Aquifer/appl/1p/: CMakeLists.txt
Aquifer/appl/1p/CH4/: CMakeLists.txt  params.input  runscript.py  spatialparams.hh
Aquifer/appl/1p/CO2/: CMakeLists.txt  params.input  runscript.py  spatialparams.hh  vtk-merge-multi.py
Aquifer/appl/1p/H2/: CMakeLists.txt  GP_ActiveLearning.py  GP_ActiveLearning_v2.py  aggregate_iteration.py  aggregate_iteration.sh  controller.py  extract_reservoir_parameters.py  generate_simulation_pool.py  main.cc  matched_reservoir_parameters.csv  params.input  problem.hh  properties.hh  run_chunk.py  run_chunk_array.sh  runscript.py  runscript1.py  (+2 more)
Aquifer/appl/1p/Test2/: CMakeLists.txt  params.input  runscript.py
Aquifer/appl/1p/Test2/fluidsystems/: mixture.hh
Aquifer/appl/CH4/: CMakeLists.txt  README.md  main.cc  params.input  problem.hh  properties.hh  spatialparams.hh
Aquifer/appl/CO2/: CMakeLists.txt  params.input  problem.hh
Aquifer/appl/Cartesian/: CMakeLists.txt
Aquifer/appl/Cartesian/CO2/: CMakeLists.txt  params.input  problem.hh
Aquifer/appl/Cartesian/CO2/GEM_Comparison/: time.txt
Aquifer/appl/Cartesian/CO2/fluidsystems/: mixture.hh
Aquifer/appl/H2/: CMakeLists.txt  main.cc  params.input  properties.hh
Aquifer/appl/H2/fluidsystems/: mixture.hh
Aquifer/appl/N2/: CMakeLists.txt  params.input  problem.hh
Aquifer/appl/N2/fluidsystems/: mixture.hh
Aquifer/appl/Test1/: CMakeLists.txt  biocarbonicacid.hh  hpcoreproblem.hh  main.cc  params.input  plot.py  postprocessing.py  runscript.py
Aquifer/appl/Test2/: CMakeLists.txt  main.cc  params.input
Aquifer/appl/Test2/GEM_Comparison/: bhp.txt
Aquifer/build-cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  activate  cmake_install.cmake  config.h  config_collected.h.cmake  dumux-Mixing-config.cmake  dumux-Mixing-targets.cmake  dumux-Mixing.pc  run-in-dune-env
Aquifer/build-cmake/TestMetaData/: appl_1p2pnc_box_H2.json  appl_1p2pnc_tpfa_H2.json  appl_1pnc_box_CH4.json  appl_1pnc_box_CO2.json  appl_1pnc_box_N2.json  appl_1pnc_box_Test1.json  appl_1pnc_box_Test2.json  appl_1pnc_box_Test3.json  appl_1pnc_box_Test4.json  appl_1pnc_tpfa_CH4.json  appl_1pnc_tpfa_CO2.json  appl_1pnc_tpfa_N2.json  appl_1pnc_tpfa_Test1.json  appl_1pnc_tpfa_Test2.json  appl_1pnc_tpfa_Test3.json  appl_1pnc_tpfa_Test4.json  appl_2pnc_box_CH4.json  appl_2pnc_box_CH4_cart.json  appl_2pnc_box_CO2.json  appl_2pnc_box_CO2_cart.json  appl_2pnc_box_H2.json  appl_2pnc_box_H2_cart.json  appl_2pnc_box_N2.json  appl_2pnc_box_N2_cart.json  appl_2pnc_tpfa_CH4.json  appl_2pnc_tpfa_CH4_cart.json  appl_2pnc_tpfa_CO2.json  appl_2pnc_tpfa_CO2_cart.json  appl_2pnc_tpfa_H2.json  appl_2pnc_tpfa_H2_cart.json  appl_2pnc_tpfa_N2.json  appl_2pnc_tpfa_N2_cart.json  appl_2pncgeobio_biogeochemical_box2.json  appl_2pncgeobio_biogeochemical_box2_cart.json  appl_2pncgeobio_biogeochemical_boxnobio.json  appl_2pncgeobio_biogeochemical_boxnobio_cart.json  appl_2pncgeobio_biogeochemical_tpfa2.json  appl_2pncgeobio_biogeochemical_tpfa2_cart.json  appl_2pncgeobio_biogeochemical_tpfanobio.json  appl_2pncgeobio_biogeochemical_tpfanobio_cart.json
Aquifer/build-cmake/appl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Aquifer/build-cmake/dumux/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Aquifer/build-cmake/include/: dumux-Mixing-config.hh  dumux-Mixing-config.hh.cmake
Aquifer/build-cmake/include_private/: dumux-Mixing-config-private.hh  dumux-Mixing-config-private.hh.cmake
Aquifer/dumux/: CMakeLists.txt
Aquifer/dumux/flux/: CMakeLists.txt  fickslaw_fwd.hh
Aquifer/dumux/material/: CMakeLists.txt
Aquifer/dumux/porousmediumflow/: CMakeLists.txt
(+32515 files in other folders)
